--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     font-family: sans-serif;
 }
 
+
+
 main {
     display: flex;
     align-items: center;
@@ -17,6 +19,11 @@ main {
     margin-top: 50px;
     z-index: 2;
     animation: 1.5s ease-in-out iphone-aparece;
+}
+
+.logo-16 {
+    width: 17rem;
+    margin-bottom: -8vh;
 }
 
 main .div-principal h2 {
@@ -74,6 +81,43 @@ main .div-principal .conteudo span {
     cursor: pointer;
 }
 
+.navigation .logo {
+    width: 50px;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navigation ul {
+    display: flex;
+    align-items: center;
+    gap: 60px;
+}
+
+.navigation ul li a {
+    color: #888;
+    font-weight: 600;
+    padding-bottom: 4px;
+    transition: all 0.5s ease-in-out;
+}
+
+.navigation ul li a:hover {
+    color: #fff;
+    border-bottom: 1px solid #fff;
+}
+
+.navigation .check {
+    color: #fff;
+    border-bottom: 1px solid #fff;
+}
+header {
+    padding: 20px 70px;
+    background: #070808;
+}
+
 #azul {
     background-color: #81A5C4;
 }
@@ -98,7 +142,7 @@ main .div-principal .conteudo span {
     background-color: #EDE7F1;
 }
 
-.circulo {
+.circle {
     background-color: #6a6772;
     clip-path: circle(600px at right 1000px);
     width: 100%;
@@ -147,9 +191,9 @@ main .div-principal .conteudo span {
     to {
         width: 200px;
     }
-} {
+} 
     
-}
+
 
 @keyframes circulo-aparece {
     0% {
