--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     font-family: sans-serif;
 }
 
+button {
+    font-size: 21px;
+}
+
 body {
     background: #D3D3D3;
 }
@@ -61,7 +65,7 @@ main .div-principal button {
     color: #ffffff;
     padding: 10px 20px;
     border: none;
-    border-radius: 10px;
+    
     cursor: pointer;
     margin-top: 20px;
     transition: 0.5s ease-in-out all;
@@ -151,7 +155,7 @@ header {
 }
 
 .circle {
-    background-color: #6a6772;
+    background-color: #8A2BE2;
     clip-path: circle(600px at right 1000px);
     width: 100%;
     height: 100%;
