--- a/style.css
+++ b/style.css
@@ -7,14 +7,15 @@
 
 button {
     font-size: 21px;
+    margin-bottom: 2vh;
 }
 
 body {
     background: #D3D3D3;
 }
 
-.conteudo {
-    box-shadow: #8888;
+.conteudo span{
+    box-shadow: 2px 2px #302f2f88;
 }
 
 
@@ -34,8 +35,8 @@ main {
 }
 
 .logo-16 {
-    width: 17rem;
-    margin-bottom: -8vh;
+    width: 22rem;
+    margin-bottom: 6vh;
 }
 
 main .div-principal h2 {
@@ -72,11 +73,11 @@ main .div-principal button {
 }
 
 main .div-principal button:hover {
-    background-color: #5dadfd;
+    background-color: #2c90ee;
 }
 
 main .div-principal button:active {
-    background-color: #a1bcd8;
+    background-color: #0004d3;
 }
 
 
@@ -133,25 +134,77 @@ header {
 #azul {
     background-color: #81A5C4;
 }
+#azul:hover {
+    opacity: 0.6;
+}
+
+#azul:active {
+    opacity: 1;
+    background: #53ace7;
+}
 
 #amarelo {
     background-color: #F7DA47;
+}
+
+#amarelo:hover {
+    opacity: 0.6;
+}
+
+#amarelo:active {
+    opacity: 1;
+    background: yellow;
 }
 
 #branco {
     background-color: #C1C1C1;
 }
 
+#branco:hover{
+    opacity: 0.6;
+}
+#branco:active{
+    opacity: 1;
+    background: white;
+}
+
 #preto {
     background-color: #272D33;
+}
+
+#preto:hover {
+    opacity: 0.6;
+}
+
+#preto:active {
+    opacity: 1;
+    background: black;
 }
 
 #vermelho {
     background-color: #B50012;
 }
 
+#vermelho:hover {
+    opacity: 0.6;
+}
+
+#vermelho:active {
+    opacity: 1;
+    background: red;
+}
+
 #roxo {
     background-color: #7c42a3;
+}
+
+#roxo:hover {
+    opacity: 0.6;
+}
+
+#roxo:active {
+    opacity: 1;
+    background: #7c03ee;
 }
 
 .circle {
